--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="container-fluid">
               <a class="navbar-brand">DRA Search-NSW&VIC</a>
               <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input id = "typein" class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search">
+                <button id = "select-btn" class="btn btn-outline-success" type="submit">Search</button>
               </form>
             </div>
           </nav>
@@ -28,11 +28,18 @@
             <h3 style="text-align: center; font-size: 20px;">Detailed Information</h3><br>
             <div class = 'row'>
                 <div class = 'col-md-12'>
-                    <p style="text-align: center;">Is this belongs to DRA? {{results}}</p>
-                    <p style="text-align: center;">Postcode: {{postcode}}</p>
-                    <p style="text-align: center;">Name: {{locality}}</p> 
-                    <p style="text-align: center;">State: {{state}}</p>
-                    <p style="text-align: center;">Category: {{category}}</p>
+                  <table style="width: 100%; border-collapse: collapse;">
+                    <tr>
+                      <th>Is this belongs to DRA?</th>
+                      <th>Postcode</th>
+                      <th>Name</th>
+                      <th>State</th>
+                      <th>Category</th>
+                    </tr>
+                    <tbody id='rows'>
+
+                    </tbody>
+                  </table>
                 </div>
             </div>
           </div>
@@ -51,6 +58,7 @@
    crossorigin=""></script>
 
           <!-- API key -->
+          <script src="https://d3js.org/d3.v5.min.js"></script>
           <script type="text/javascript" src="assets/js/config.js"></script>
           <script type="text/javascript" src="assets/js/dra.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
