--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <div class = 'col-md-12'>
                   <table style="width: 100%; border-collapse: collapse;">
                     <tr>
-                      <th>Is this belongs to DRA?</th>
-                      <th>Postcode</th>
-                      <th>Name</th>
-                      <th>State</th>
-                      <th>Category</th>
+                      <th style="font-size: 20px;">Is this belongs to DRA?</th>
+                      <th style="font-size: 20px;">Postcode</th>
+                      <th style="font-size: 20px;">Name</th>
+                      <th style="font-size: 20px;">State</th>
+                      <th style="font-size: 20px;">Category</th>
                     </tr>
                     <tbody id='rows'>
 
