--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body style="background-color: rgb(239, 241, 243);">
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand">DRA Search-NSW&VIC</a>
+              <a class="navbar-brand" style="font-size: 30px;">DRA Search-NSW&VIC</a>
               <form class="d-flex">
                 <input id = "typein" class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search">
                 <button id = "select-btn" class="btn btn-outline-success" type="submit">Search</button>
