--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
               <form class="d-flex">
                 <input id = "typein" class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search">
                 <button id = "select-btn" class="btn btn-outline-success" type="submit">Search</button>
+                <input id = "typein-name" class="form-control me-2" type="search" placeholder="Name" aria-label="Search">
+                <button id = "select-btn-name" class="btn btn-outline-success" type="submit">Search</button>
               </form>
             </div>
           </nav>
